samples/_failures_safe/1761044275_2b69ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3519be94.c: In function ‘main’:
./samples/SAFE/__tmp_3519be94.c:138: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_3519be94.c:137:5: error: expected declaration or statement at end of input
  137 |     if
      |     ^~
